--- a/templates/index.html
+++ b/templates/index.html
@@ -408,7 +408,7 @@
   <!-- BOTÃO PESQUISAR PEÇA (GRANDE) LOGO APÓS O HEADER -->
   <div class="pesquisar-peca-container">
     <a href="{{ url_for('item_search') }}" class="btn-pesquisar-peca">
-      Pesquisar Peça
+      Pesquisar Peças
     </a>
   </div>
 
